PLT-3094 - Fixing autocomplete and image modal scrolling on mobile (#3279)

--- a/webapp/sass/layout/_post.scss
+++ b/webapp/sass/layout/_post.scss
@@ -258,10 +258,6 @@ body.ios {
         position: absolute;
         width: 100%;
 
-        .modal-open & {
-            @include clearfix;
-        }
-
         &.active {
             display: inline;
         }
