--- a/webapp/sass/responsive/_mobile.scss
+++ b/webapp/sass/responsive/_mobile.scss
@@ -1,6 +1,14 @@
 @charset 'UTF-8';
 
 @media screen and (max-width: 768px) {
+    #post-list {
+        .post-list-holder-by-time {
+            .modal-open & {
+                @include clearfix;
+            }
+        }
+    }
+
     .post-code__language {
         @include opacity(.6);
         @include transition(none);
